Fix: Comprehensive page navigation for crossref entries in both internal and external viewers (#8128)